<resources>
    <string name="app_name">MyAqidah Mobile</string>
    <string name="beranda">Beranda</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="registrasi">Registrasi</string>
    <string name="jadwal_dokter">Jadwal Dokter</string>
    <string name="profile">Profile</string>


    <string name="onboarding1">Menjadi Rumah Sakit yang terkemuka yang memberikan Pelayanan Kesehatan Prima</string>
    <string name="onboarding2">Melayani Dengan Kasih Sayang dan Profesional</string>
    <string name="something_wrong">Terjadi Kesalahan</string>
    <string name="gawat_darurat">Gawat Darurat</string>
    <string name="notifikasi">Notifikasi</string>

    <string name="message_password">Password harus minimal 8 karakter</string>
    <string name="btn_ready_login">Sudah punya akun? Login</string>

    <string-array name="gender_array">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="goldar_array">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>

    <string-array name="nasabah_array">
        <item>Umum</item>
        <item>Pribadi</item>
    </string-array>

    <string-array name="kelurga_array">
        <item>Ayah</item>
        <item>Ibu</item>
        <item>Anak</item>
        <item>Saudara Kandung</item>

    </string-array>

    <string-array name="nikah_array">
        <item>Menikah</item>
        <item>Belum Menikah</item>
    </string-array>

    <string-array name="agama_array">
        <item>Islam</item>
        <item>Kristen</item>
        <item>Katholik</item>
        <item>Hindu</item>
        <item>Budha</item>
        <item>Khonghucu</item>
    </string-array>

    <string-array name="instalasi_options">
        <item>IGD/Instalasi Gawat Darurat</item>
        <item>Poliklinik/Instalasi Rawat Jalan</item>
        <item>Instalasi Rawat Inap</item>
        <item>Instalasi Laboratorium</item>
        <item>Instalasi Radiologi</item>
        <item>Ruang OKA</item>
        <item>Ruang VK</item>
    </string-array>

    <string-array name="asal_rujukan_options">
        <item>Datang Sendiri</item>
        <item>Faskes 1</item>
        <item>Faskes 2 (RS)</item>
        <item>Pasien Luar</item>
        <item>Rujukan Internal</item>
    </string-array>

    <string-array name="cara_bayar_options">
        <item>Asuransi Swasta</item>
        <item>BPJS Ketenagakerjaan</item>
        <item>JKN/BPJS Kesehatan</item>
        <item>Karyawan RS Aqidah</item>
        <item>Pembiayaan Dinkes</item>
        <item>Perusahaan</item>
        <item>TDC</item>
        <item>Umum</item>
    </string-array>

    <string-array name="rujukan_faskes_options">
        <item>Datang Sendiri</item>
        <item>Faskes 1</item>
        <item>Faskes 2 (RS)</item>
        <item>Pasien Luar</item>
        <item>Rujukan Internal</item>
    </string-array>

    <string-array name="perusahaan_options">
        <item>Perusahaan</item>
    </string-array>

    <string name="welcome">Hi, %1$s!</string>
    <string name="lihat_lebih_sedikit">Lihat Lebih Sedikit</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="failed_to_load_information">Failed to load information: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="article_image">article_image</string>
    <string name="no_data">Data tidak tersedia</string>
    <string name="tekan_sekali_lagi_untuk_keluar">Tekan sekali lagi untuk keluar</string>
    <string name="golongan_darah">Golongan Darah: </string>
    <string name="usia">Usia: </string>
    <string name="jaminan">Jaminan: </string>
    <string name="kunjungan_terakhir">Kunjungan Terakhir: </string>
    <string name="terdaftar">Terdaftar: </string>
    <string name="no_rekam_medis">No. Rekam Medis: </string>
    <string name="nama_pasien">Nama Pasien: </string>
    <string name="no_notifications">Tidak ada Notifikasi</string>
    <string name="kunjungan_terakhir_belum_ada_kunjungan">Kunjungan Terakhir: belum ada kunjungan</string>


</resources>