<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.myaqidahmobile.ui.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_service"
            app:destination="@id/navigation_pelayanan" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pelayanan"
        android:name="com.dicoding.myaqidahmobile.ui.service.ServiceFragment"
        android:label="@string/pelayanan"
        tools:layout="@layout/fragment_service" >
        <action
            android:id="@+id/action_navigation_service_to_navigation_registrasi"
            app:destination="@id/navigation_jadwal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_jadwal"
        android:name="com.dicoding.myaqidahmobile.ui.jadwal.ScheduleFragment"
        android:label="@string/jadwal_dokter"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_navigation_news"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.myaqidahmobile.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_news_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>